Fri Aug  9 14:02:01 2013  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* tool/make-snapshot: Fix order of priority for option parameter.

Fri Aug  9 12:06:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_str_normalize_ospath): normalize to Normalization Form C
	  using CFString.

Fri Aug  9 10:53:57 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* time.c (get_timeval, get_new_timeval): use rb_obj_class()
	  instead of CLASS_OF() because CLASS_OF() may return
	  a singleton class.

Fri Aug  9 10:42:11 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_insnhelper.c (vm_invoke_block): returning from lambda proc
	  now always exits from the Proc. [ruby-core:56193] [Feature #8693]

	* NEWS, test/ruby/test_lambda.rb: ditto. Patch by nobu.

Fri Aug  9 00:10:32 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enumerator.c (lazy_zip_func): fix non-single argument.  fix
	  out-of-bound access and pack multiple yielded values.
	  [ruby-core:56383] [Bug #8735]

Thu Aug  8 23:01:20 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_mod_singleton_p): new method Module#singleton_class? to
	  return whether the receiver is a singleton class or not.
	  [ruby-core:51087] [Feature #7609]

Thu Aug  8 21:56:44 2013  Tanaka Akira  <akr@fsij.org>

	* time.c (time_overflow_p): Avoid signed integer overflow.
	  (rb_time_new): Fix overflow condition.

Thu Aug  8 19:58:02 2013  Koichi Sasada  <ko1@atdot.net>

	* thread.c (rb_threadptr_pending_interrupt_check_mask):
	  use RARRAY_RAWPTR() instead of RARRAY_PTR() because
	  there is no new reference.

Thu Aug  8 19:56:52 2013  Koichi Sasada  <ko1@atdot.net>

	* string.c (rb_str_format_m): use RARRAY_RAWPTR() instead of
	  RARRAY_PTR() because there is no new reference.

Thu Aug  8 19:55:51 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: define USE_RGENGC_LOGGING_WB_UNPROTECT.

Thu Aug  8 16:44:25 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: add old macro name `RUBY_EVENT_SWITCH'.